%% Build and check from R:
%% news(db = tools:::.build_news_db_from_package_NEWS_Rd("<Matrix>/inst/NEWS.Rd"))
\name{NEWS}
\title{News for \R{} Package \pkg{Matrix}}
\encoding{UTF-8}
%% NB: The date (yyyy-mm-dd) is the "Packaged: " date in ../DESCRIPTION
\section{Changes in version 1.8-0 (2024-05-24 r4764)}{
  \subsection{Significant User-Visible Changes}{
    \itemize{
      \item This version will introduce integer matrices, complex
      matrices, and complex factorizations.  Names and definitions of
      factorization classes may change to support the generalization.
      It is currently under active development and until it stabilizes
      users should consider installing \pkg{Matrix} versions 1.7-z
      instead.

      \item The formal argument list of generic function
      \code{forceSymmetric} is changed from \code{(x, uplo)} to
      \code{(x, \dots)}, allowing methods to accept further arguments.
      The generic function now dispatches only on \code{x}.
      Method definitions are adjusted accordingly.

      \item The formal argument lists of generic functions
      \code{symmpart} and \code{skewpart} are changed from \code{(x)} to
      \code{(x, \dots)}.
    }
  }
  \subsection{New Features}{
    \itemize{
      \item Generic function \code{ct} for the conjugate transpose.
      \code{ct(x)} is equivalent to \code{t(x)} except for complex
      \code{x}, where it is intended to be more efficient than
      \code{Conj(t(x))} at least for \code{x} inheriting from virtual
      class \code{Matrix}.
    }
  }
  \subsection{Bug Fixes}{
    \itemize{
      \item .
    }
  }
  \subsection{Misc}{
    \itemize{
      \item \proglang{C} code uses new (since \R{} 4.4.0) \code{OBJSXP}
      in place of deprecated \code{S4SXP} and \code{TYPEOF(.) == OBJSXP}
      in place of (not specific enough) \code{IS_S4_OBJECT(.)}.
    }
  }
}

\section{Changes in version 1.7-1 (2024-04-11 r4951)}{
  \subsection{Significant User-Visible Changes}{
    \itemize{