@@ -22,59 +22,39 @@
     .Call(R_dense_symmpart, x, trans)
 .dense.skewpart <- function(x, trans = "C", ...)
     .Call(R_dense_skewpart, x, trans)
-.dense.is.di <- function(object)
-    .Call(R_dense_is_diagonal, object)
-.dense.is.tr <- function(object, upper = NA)
-    .Call(R_dense_is_triangular, object, upper)
-.dense.is.sy <- function(object, trans = "C", checkDN = TRUE, ...) {
+.dense.is.sy <- function(object,
+                         tol = 100 * .Machine$double.eps, tol1 = 8 * tol,
+                         trans = "C", checkDN = TRUE, ...) {
     if(checkDN) {
         ca <- function(check.attributes = TRUE, ...) check.attributes
         checkDN <- ca(...)
     }
-    .Call(R_dense_is_symmetric, object, trans, checkDN)
-}
-.dense.is.sy.dz <- function(object, trans = "C", checkDN = TRUE,
-                            tol = 100 * .Machine$double.eps,
-                            tol1 = 8 * tol, ...) {
-    ## backwards compatibility: don't check DN if check.attributes=FALSE
-    if(checkDN) {
-        ca <- function(check.attributes = TRUE, ...) check.attributes
-        checkDN <- ca(...)
-    }
-    ## be very fast when requiring exact symmetry
-    if(tol <= 0)
-        return(.Call(R_dense_is_symmetric, object, trans, checkDN))
-    ## pretest: is it square?
-    d <- object@Dim
-    if((n <- d[2L]) != d[1L])
-        return(FALSE)
-    ## pretest: are DN symmetric in the sense of validObject(<symmetricMatrix>)?
-    if(checkDN && !isSymmetricDN(object@Dimnames))
-        return(FALSE)
-    if(n == 0L)
-        return(TRUE)
-    object <- .M2gen(object)
-
-    ## now handling n-by-n [dz]geMatrix, n >= 1:
-
-    Cj <- if(is.complex(object@x) && identical(trans, "C")) Conj else identity
-    ae <- function(check.attributes, ...)
-        ## discarding possible user-supplied check.attributes
-        all.equal.numeric(..., check.attributes = FALSE)
-
-    ## pretest: outermost rows ~= outermost columns?
-    ## (fast for large asymmetric)
-    if(length(tol1)) {
-        i. <- if(n <= 4L) 1L:n else c(1L, 2L, n - 1L, n)
-        for(i in i.)
-            if(!isTRUE(ae(target = object[i, ], current = Cj(object[, i]),
-                          tolerance = tol1, ...)))
+    stopifnot(is.numeric(tol), length(tol) == 1L, !is.na(tol))
+    ans <- .Call(R_dense_is_symmetric, object, tol <= 0, trans, checkDN)
+    if(!is.na(ans))
+        return(ans)
+    ## 'object' is an n-by-n [dz]denseMatrix, n >= 1
+    ae <- function(target, current, tolerance, scale = NULL, ...)
+        all.equal.numeric(target = target, current = current,
+                          tolerance = tolerance, scale = scale,
+                          check.attributes = FALSE, check.class = FALSE)
+    conjugate <- is.complex(object@x) && identical(trans, "C")
+    if(length(tol1) && (n <- object@Dim[1L]) > 1L) {
+        op <- if(conjugate) Conj else identity
+        for(i in if(n > 4L) c(1L, 2L, n - 1L, n) else 1L:n)
+            if(is.character(ae(target = object[i, ], current = op(object[, i]),
+                               tolerance = tol1, ...)))
                 return(FALSE)
     }
-    isTRUE(ae(target    =      object  @x,
-              current   = Cj(t(object))@x,
+    object <- .M2gen(object)
+    op <- if(conjugate) ct else t
+    isTRUE(ae(target = object@x, current = op(object)@x,
               tolerance = tol, ...))
 }
+.dense.is.tr <- function(object, upper = NA)
+    .Call(R_dense_is_triangular, object, upper)
+.dense.is.di <- function(object)
+    .Call(R_dense_is_diagonal, object)
 
 setMethod("diff", c(x = "denseMatrix"),
           ## Mostly cut and paste of base::diff.default :
@@ -126,11 +106,6 @@ setMethod("isSymmetric" , c(object = "denseMatrix"), .dense.is.sy)
 setMethod("isTriangular", c(object = "denseMatrix"), .dense.is.tr)
 
 setMethod("isDiagonal"  , c(object = "denseMatrix"), .dense.is.di)
-
-.dense.subclasses <- names(getClassDef("denseMatrix")@subclasses)
-for (.cl in grep("^[dz](ge|tr|tp)Matrix$", .dense.subclasses, value = TRUE))
-setMethod("isSymmetric" , c(object = .cl), .dense.is.sy.dz)
-rm(.cl, .dense.subclasses)
 
 
 ## METHODS FOR CLASS: unpackedMatrix (virtual)
@@ -207,17 +182,17 @@ setMethod("forceSymmetric", c(x = "matrix"),
               .m2dense(x, ".sy", uplo = uplo, trans = trans))
 setMethod("symmpart", c(x = "matrix"),
           function(x, trans = "C", ...) {
-              Cj <- if(is.complex(x) && identical(trans, "C")) Conj else identity
-              symmetrizeDN(0.5 * (x + Cj(t(x))))
+              op <- if(is.complex(x) && identical(trans, "C")) Conj else identity
+              symmetrizeDN(0.5 * (x + op(t(x))))
           })
 setMethod("skewpart", c(x = "matrix"),
           function(x, trans = "C", ...) {
-              Cj <- if(is.complex(x) && identical(trans, "C")) Conj else identity
-              symmetrizeDN(0.5 * (x - Cj(t(x))))
+              op <- if(is.complex(x) && identical(trans, "C")) Conj else identity
+              symmetrizeDN(0.5 * (x - op(t(x))))
           })
 setMethod("isTriangular", c(object = "matrix"), .dense.is.tr)
 setMethod("isDiagonal"  , c(object = "matrix"), .dense.is.di)
 
 rm(.uM.pack, .uM.pack.ge, .m.pack,
-   list = c(grep("^[.]dense[.](band|tri[ul]|diag[.](get|set)|c?t|fS|symmpart|skewpart|is[.](sy|tr|di)([.]dz)?)$",
+   list = c(grep("^[.]dense[.](band|tri[ul]|diag[.](get|set)|c?t|fS|symmpart|skewpart|is[.](sy|tr|di))$",
                  ls(all.names = TRUE), value = TRUE)))
