@@ -24,8 +24,8 @@ SEXP R_dense_symmpart(SEXP, SEXP);
 SEXP dense_skewpart(SEXP, const char *, char);
 SEXP R_dense_skewpart(SEXP, SEXP);
 
-int dense_is_symmetric(SEXP, const char *, char, int);
-SEXP R_dense_is_symmetric(SEXP, SEXP, SEXP);
+int dense_is_symmetric(SEXP, const char *, int, char, int);
+SEXP R_dense_is_symmetric(SEXP, SEXP, SEXP, SEXP);
 
 int dense_is_triangular(SEXP, const char *, int);
 SEXP R_dense_is_triangular(SEXP, SEXP);
