@@ -155,7 +155,7 @@ static R_CallMethodDef CallEntries[] = {
 	CALLDEF(R_dense_force_symmetric, 3),
 	CALLDEF(R_dense_symmpart, 2),
 	CALLDEF(R_dense_skewpart, 2),
-	CALLDEF(R_dense_is_symmetric, 3),
+	CALLDEF(R_dense_is_symmetric, 4),
 	CALLDEF(R_dense_is_triangular, 2),
 	CALLDEF(R_dense_is_diagonal, 1),
 	CALLDEF(R_dense_marginsum, 4),
@@ -172,7 +172,7 @@ static R_CallMethodDef CallEntries[] = {
 	CALLDEF(R_sparse_force_symmetric, 3),
 	CALLDEF(R_sparse_symmpart, 2),
 	CALLDEF(R_sparse_skewpart, 2),
-	CALLDEF(R_sparse_is_symmetric, 3),
+	CALLDEF(R_sparse_is_symmetric, 4),
 	CALLDEF(R_sparse_is_triangular, 2),
 	CALLDEF(R_sparse_is_diagonal, 1),
 	CALLDEF(R_sparse_marginsum, 5),
